fix: style back with scrolling within 110vh and gaps occur on error messages

--- a/src/components/shared/Header/Header.module.css
+++ b/src/components/shared/Header/Header.module.css
@@ -1,3 +1,3 @@
 .logo-container {
-    margin: 32px 0 -40px 32px;
+    margin: 32px 0 -50px 32px;
 }
