--- a/src/pages/ForgetPassword/ForgetPassword.module.css
+++ b/src/pages/ForgetPassword/ForgetPassword.module.css
@@ -4,19 +4,14 @@ p {
 
 .page {
   max-width: 100%;
-  height: 100dvh;
-  /* if we apply this the screen will not be full size as full size in height in 100dvh  */
-  /* height: 1024px; */
-  background-color: #eff0f0;
+  height: 110dvh;
+  background-color: var(--color-bg-page);
 }
 
 .page__window {
-  width: 820px;
+  width: 910px;
   max-width: 100%;
-  height: 750px; 
-  /* if we apply this the screen will not be full size as full size in height in 100dvh  */
-  /* max-width: 910px;
-  height: 840px; */
+  height: 840px; 
   border-radius: 16px;
   background-color: #ffffff;
   display: flex;
